# trafic_sim

./: .gitignore  CMakeLists.txt  Juncao.cpp  Juncao.hpp  Logger.cpp  Logger.hpp  Makefile  Orientacao.hpp  Pista.cpp  Pista.hpp  README.md  Simulacao.cpp  Simulacao.exe.stackdump  Simulacao.hpp  ThreadHelper.hpp  UT.cpp  UT.hpp  UpgradeLog.htm  build.bat  passos.txt  trafic_sim.sln  trafic_sim.vcxproj  trafic_sim.vcxproj.filters
Debug/: trafic_sim.ilk  vc120.idb
Debug/trafic_sim.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  trafic_sim.lastbuildstate
