CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )

PROJECT(Simulador)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

MESSAGE(STATUS "Building ${PROJECT_NAME} ...")

SET(PROJECT_MAJOR_VERSION 1)
SET(PROJECT_MINOR_VERSION 0)
SET(PROJECT_VERSION ${PROJECT_MAJOR_VERSION}.${PROJECT_MINOR_VERSION})

SET(INCLUDE_DIR ${CMAKE_SOURCE_DIR})

SET(SOURCE_DIR .)

SET(LIB_DIR ${CMAKE_SOURCE_DIR}/lib)
link_directories(${LIB_DIR})

FILE(GLOB HEADERS
	"${SOURCE_DIR}/*.h"
	"${SOURCE_DIR}/*.hpp")

INCLUDE_DIRECTORIES( 
	${INCLUDE_DIR} 
	${CMAKE_CURRENT_BINARY_DIR}/includes)

FILE(GLOB SOURCES "${SOURCE_DIR}/*.cpp")

if (WIN32)
    add_definitions(-DDEBUG -DWINDOWS -D_CRT_SECURE_NO_WARNINGS)
endif()
if (UNIX OR LINUX)
    add_definitions(-DDEBUG -DLINUX   -D_CRT_SECURE_NO_WARNINGS)
endif()

MESSAGE(STATUS "Compiling ..." )

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})

MESSAGE(STATUS "COMPLETED !" )